objects/vlocity_cmt__PricingVariableBinding__c.object
<CustomObject>
    <description>Pricing variables can be bound to a field on the order/quote/contract line and asset. The pricing variable binding controls to which field a given pricing variable is bound on a given object.</description>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationFieldApiName__c</fullName>
        <label>Destination Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__DestinationSObjectType__c</fullName>
        <label>Destination SObject Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PricingVariableId__c</fullName>
        <label>Pricing Variable</label>
        <referenceTo>vlocity_cmt__PricingVariable__c</referenceTo>
        <relationshipLabel>Pricing Variable Bindings</relationshipLabel>
        <relationshipName>PricingVariableBindings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pricing Variable Binding</label>
    <nameField>
        <label>Pricing Variable Binding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Variable Bindings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>